--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "start": "next start",
     "build-css": "tailwindcss build styles/globals.css -o styles/build/styles.css"
   },
- 
   "dependencies": {
     "next": "10.0.9",
+    "pure-react-carousel": "^1.27.6",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-multi-carousel": "^2.6.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.7",
