--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 8001",
-    "build": "next build",
-    "start": "next start",
+    "build": "next build -p 8001",
+    "start": "next start -p 8001",
     "build-css": "tailwindcss build styles/globals.css -o styles/build/styles.css"
   },
   "dependencies": {
