--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-multi-carousel": "^2.6.5",
+    "react-scroll": "^1.8.4",
     "react-toastify": "^8.1.0"
   },
   "devDependencies": {
