--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
     "tailwind-scrollbar-hide": "^1.1.7",
     "webpack": "^5.88.1"
   },
+
+  "engines": {
+    "node": "16.x"
+  },
+  
   "devDependencies": {
     "autoprefixer": "*",
     "postcss": "*",
